--- a/app/pug/includes/_main.pug
+++ b/app/pug/includes/_main.pug
@@ -1,5 +1,5 @@
 main.main
-    .first-box.box-bg_blue
+    .first-box.box-bg_blue.d-flex.align-items-center
         .container
             .row
                 .col-md
@@ -145,41 +145,41 @@ main.main
                         div(id="teasers" role="tabpanel" aria-labelledby="teasers-tab").tab-pane.fade.show.active
                             .container-fluid
                                 .row
-                                    .col-12.col-md-8.col-lg-6
-                                        img(src="/img/mac.png", alt="").teasers-pisition.img_max-width
+                                    .col-12.col-md-8.col-lg-6.d-flex.align-items-center.justify-content-center
+                                        img(src="/img/mac.png", alt="").teasers-pisition.img_max-width.d-flex.align-items-center.justify-content-center
                                     .col-12.col-md-4.col-lg-6
-                                        h3.tabs__title One of the most interest-provoking advertising method.
-                                        span.tabs__span An appealing picture with an attractive headline create a true highlight of the page, which is difficult to ignore. Wide customization options help to configure and maintain this popular ad format in accordance with advertiser needs and user expectations.
+                                        h3.tabs__title.tabs-content_center-media768 One of the most interest-provoking advertising method.
+                                        span.tabs__span.tabs-content_center-media768 An appealing picture with an attractive headline create a true highlight of the page, which is difficult to ignore. Wide customization options help to configure and maintain this popular ad format in accordance with advertiser needs and user expectations.
                                         br
-                                        a(href="#").tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
+                                        a(href="#").tabs-content_center-media768.tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
 
                         div(id="context" role="tabpanel" aria-labelledby="context-tab").tab-pane.fade
                             .row
                                 .col-12.col-md-8.col-lg-6.d-flex.align-items-center.justify-content-center
                                     img(src="/img/context.png", alt="").img_max-width
                                 .col-12.col-md-4.col-lg-6
-                                    h3.tabs__title Textual ads - easy and fruitful format for commercial goals
-                                    span.tabs__span Texts are suitable advertising tool for any-purpose promotion campaign. Thanks to adaptive design and wide customization options, this kind of ads naturally fits into main content of the page and softly induce visitors to follow them.
+                                    h3.tabs__title.tabs-content_center-media768 Textual ads - easy and fruitful format for commercial goals
+                                    span.tabs__span.tabs-content_center-media768 Texts are suitable advertising tool for any-purpose promotion campaign. Thanks to adaptive design and wide customization options, this kind of ads naturally fits into main content of the page and softly induce visitors to follow them.
                                     br
-                                    a(href="#").tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
+                                    a(href="#").tabs-content_center-media768.tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
                         div(id="banners" role="tabpanel" aria-labelledby="banners-tab").tab-pane.fade
                             .row
                                 .col-12.col-md-8.col-lg-6.d-flex.align-items-center.justify-content-center
                                     img(src="/img/banners.png", alt="").img_max-width
                                 .col-12.col-md-4.col-lg-6
-                                    h3.tabs__title An ultimate eye-catching advertising format to draw viewers’ attention
-                                    span.tabs__span Banners are an effective image-based promotional tool to notify users of the product. Accompanied by useful customization features, high-quality placement, and animating possibility, these influential ads leave the little possibility to remain unnoticed.
+                                    h3.tabs__title.tabs-content_center-media768 An ultimate eye-catching advertising format to draw viewers’ attention
+                                    span.tabs__span.tabs-content_center-media768 Banners are an effective image-based promotional tool to notify users of the product. Accompanied by useful customization features, high-quality placement, and animating possibility, these influential ads leave the little possibility to remain unnoticed.
                                     br
-                                    a(href="#").tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
+                                    a(href="#").tabs-content_center-media768.tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
                         div(id="mobile" role="tabpanel" aria-labelledby="mobile-tab").tab-pane.fade
                             .row
                                 .col-12.col-md-8.col-lg-6.d-flex.align-items-center.justify-content-center
                                     img(src="/img/mobile.png", alt="").img_max-width
                                 .col-12.col-md-4.col-lg-6
-                                    h3.tabs__title The up-to-day shortest way to reach your target audience
-                                    span.tabs__span Due to the growth of mobile Internet users, mobile ad types became one of the most productive means for goods promotion. This flexible and easily managed ad format helps to access a larger number of viewers and increase the engagement rate.
+                                    h3.tabs__title.tabs-content_center-media768 The up-to-day shortest way to reach your target audience
+                                    span.tabs__span.tabs-content_center-media768 Due to the growth of mobile Internet users, mobile ad types became one of the most productive means for goods promotion. This flexible and easily managed ad format helps to access a larger number of viewers and increase the engagement rate.
                                     br
-                                    a(href="#").tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
+                                    a(href="#").tabs-content_center-media768.tabs__button.btn_font-color_white.button_hover-and-active.d-flex.align-items-center.justify-content-center Create a campaign
     .sixth-box
         .container
             .row
@@ -189,33 +189,33 @@ main.main
                             .col-12
                                 h3.sixth-box__title The first-rate means for reaching the target market
                         .row.padding_bottom
-                            .col-3.col-md-3.col-lg-2
+                            .col-3.col-sm-2.col-md-3.col-lg-2
                                 img(src="img/icon-left-001.svg", alt="")                            
-                            .col-9.col-md-9.col-lg-10
+                            .col-9.col-sm-10.col-md-9.col-lg-10
                                 h4.sixth-box__h4 5 minutes to setup a campaign 
                                 span.sixth-box__span Quick and easy ads customization
                         .row.padding_bottom
-                            .col-3.col-md-3.col-lg-2
+                            .col-3.col-sm-2.col-md-3.col-lg-2
                                 img(src="img/icon-left-002.svg", alt="")                            
-                            .col-9.col-md-9.col-lg-10
+                            .col-9.col-sm-10.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Manual sites selection  
                                 span.sixth-box__span Choosing solely relevant ad platforms
                         .row.padding_bottom
-                            .col-3.col-md-3.col-lg-2
+                            .col-3.col-sm-2.col-md-3.col-lg-2
                                 img(src="img/icon-left-003.svg", alt="")                            
-                            .col-9.col-md-9.col-lg-10
+                            .col-9.col-sm-10.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Real-time statistic  
                                 span.sixth-box__span Only up-to-date ad campaign data
                         .row.padding_bottom
-                            .col-3.col-md-3.col-lg-2
+                            .col-3.col-sm-2.col-md-3.col-lg-2
                                 img(src="img/icon-left-004.svg", alt="")                            
-                            .col-9.col-md-9.col-lg-10
+                            .col-9.col-sm-10.col-md-9.col-lg-10
                                 h4.sixth-box__h4 100% real users 
                                 span.sixth-box__span Protection from any bot or suspicious activity
                         .row.padding_bottom
-                            .col-3.col-md-3.col-lg-2
+                            .col-3.col-sm-2.col-md-3.col-lg-2
                                 img(src="img/icon-left-005.svg", alt="")                            
-                            .col-9.col-md-9.col-lg-10
+                            .col-9.col-sm-10.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Helpful support team 
                                 span.sixth-box__span Timely assistance from qualified consultants
                 .col-12.col-md-6
@@ -224,33 +224,33 @@ main.main
                             .col-12
                                 h3.sixth-box__title For publishers who want to monetize the site
                         .row.padding_bottom
-                            .col-3.col-md-3.col-lg-2
+                            .col-3.col-sm-2.col-md-3.col-lg-2
                                 img(src="img/icon-right-001.svg", alt="")                            
-                            .col-9.col-md-9.col-lg-10
+                            .col-9.col-sm-10.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Easy to operate 
                                 span.sixth-box__span Just paste the ad code to the site
                         .row.padding_bottom
-                            .col-3.col-md-3.col-lg-2
+                            .col-3.col-sm-2.col-md-3.col-lg-2
                                 img(src="img/icon-right-002.svg", alt="")                            
-                            .col-9.col-md-9.col-lg-10
+                            .col-9.col-sm-10.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Clear statistics  
                                 span.sixth-box__span Detailed views and clicks reports
                         .row.padding_bottom
-                            .col-3.col-md-3.col-lg-2
+                            .col-3.col-sm-2.col-md-3.col-lg-2
                                 img(src="img/icon-right-003.svg", alt="")                            
-                            .col-9.col-md-9.col-lg-10
+                            .col-9.col-sm-10.col-sm-2.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Full safety  
                                 span.sixth-box__span Checked and approved advert messages 
                         .row.padding_bottom
-                            .col-3.col-md-3.col-lg-2
+                            .col-3.col-sm-2.col-md-3.col-lg-2
                                 img(src="img/icon-right-004.svg", alt="")                            
-                            .col-9.col-md-9.col-lg-10
+                            .col-9.col-sm-10.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Quick payments 
                                 span.sixth-box__span Fast and safe generation of income
                         .row.padding_bottom
-                            .col-3.col-md-3.col-lg-2
+                            .col-3.col-sm-2.col-md-3.col-lg-2
                                 img(src="img/icon-right-005.svg", alt="")                            
-                            .col-9.col-md-9.col-lg-10
+                            .col-9.col-sm-10.col-md-9.col-lg-10
                                 h4.sixth-box__h4 Various ad settings 
                                 span.sixth-box__span Easy ads adaption to the site design
     .seventh-box.blur-box-with-lines
