--- a/app/css/style.css
+++ b/app/css/style.css
@@ -83,8 +83,7 @@ body {
 .box-bg_blue {
   position: relative;
   width: auto;
-  height: -webkit-calc(100% - 80px);
-  height: calc(100% - 80px);
+  height: 100vh;
   background: transparent linear-gradient(290deg, #00B5FF 0%, #0073B9 100%) 0% 0% no-repeat padding-box;
   z-index: 10; }
 
@@ -219,6 +218,7 @@ body {
   margin-top: 40px; }
 
 .third-box {
+  margin-top: 100px;
   height: 100%;
   min-height: 350px; }
 
@@ -307,7 +307,8 @@ body {
   opacity: 1; }
 
 .fifth-box {
-  min-height: 800px; }
+  min-height: 800px;
+  height: initial !important; }
 
 .fifth-box__title {
   margin-top: 100px;
@@ -639,9 +640,10 @@ body {
 .button, .caption {
   font-family: SofiaProBold; }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 992px) {
   .navbar_position {
-    position: absolute;
+    position: absolute !important;
+    padding-left: 20px;
     top: 69px;
     left: 0px;
     width: 100%;
@@ -650,9 +652,53 @@ body {
     -webkit-box-shadow: 0px 5px 5px #0000001A;
             box-shadow: 0px 5px 5px #0000001A; } }
 
+@media only screen and (max-width: 768px) {
+  .navbar_position {
+    padding-left: 20px !important;
+    position: absolute;
+    top: 69px;
+    left: 0px;
+    width: 100%;
+    border-top: 1px solid #cdcdcd;
+    background-color: #FFFFFF;
+    -webkit-box-shadow: 0px 5px 5px #0000001A;
+            box-shadow: 0px 5px 5px #0000001A; }
+  .teasers-pisition {
+    position: initial;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .tabs-content_center-media768 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-left: auto;
+    margin-right: auto; }
+  .fifth-box__box-for-tabs {
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px; }
+  .fifth-box__batton-tabs.active {
+    -webkit-transform: initial;
+        -ms-transform: initial;
+            transform: initial; }
+  .fifth-box__batton-tabs_right-line::after {
+    content: "";
+    border-right: initial; } }
+
 @media only screen and (max-width: 575px) {
   .navbar_position {
-    position: absolute;
+    position: absolute !important;
+    padding-left: 20px;
     top: 98px;
     left: 0px;
     width: 100%;
