--- a/app/scss/import/_media.scss
+++ b/app/scss/import/_media.scss
@@ -16,8 +16,24 @@
 @media only screen and (max-width:960px) {
 }
 
+@media only screen and (max-width:992px) {
+    .navbar_position{
+        position: absolute !important;
+        padding-left: 20px;
+        top:69px;
+        left:0px;
+        width: 100%;
+        border-top:1px solid #cdcdcd;
+        background-color: #FFFFFF;
+        box-shadow: 0px 5px 5px #0000001A;
+    }
+    
+    
+}
+
 @media only screen and (max-width:768px) {
     .navbar_position{
+        padding-left: 20px !important;
         position: absolute;
         top:69px;
         left:0px;
@@ -26,11 +42,38 @@
         background-color: #FFFFFF;
         box-shadow: 0px 5px 5px #0000001A;
     }
+    .teasers-pisition{
+        position: initial;
+        justify-content: center;
+
+    }
+    .tabs-content_center-media768{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        
+    }
+    .fifth-box__box-for-tabs{
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+    }
+    .fifth-box__batton-tabs.active{
+        transform: initial;
+    }
+
+    .fifth-box__batton-tabs_right-line::after{
+        content: "";
+        border-right: initial;
+       
+    }
 }
 
 @media only screen and (max-width:575px) {
     .navbar_position{
-        position: absolute;
+        position: absolute !important;
+        padding-left: 20px;
         top:98px;
         left:0px;
         width: 100%;
@@ -44,7 +87,9 @@
     .third-box.blur-box-with-lines::before{
         content: none;
     }
+    
 }
 
 @media only screen and (max-width:375px) {
 }
+
