--- a/app/scss/import/_vars.scss
+++ b/app/scss/import/_vars.scss
@@ -5,3 +5,12 @@ $basicBlack:#000000;
 $Raleway:'Raleway', sans-serif;
 $Poppins:'Poppins', sans-serif;
 
+$height-icon: 24px;
+$width-line: 28px;
+$height-line: 4px;
+$transition-time: 0.4s;
+$rotation: 45deg;
+$translateY: ($height-icon / 2);
+$translateX: 0;
+$barsColor: #0074BA;
+
