add  dist folder

--- a/app/pug/includes/_main.pug
+++ b/app/pug/includes/_main.pug
@@ -146,7 +146,7 @@ main.main
                             .container-fluid
                                 .row
                                     .col-12.col-md-8.col-lg-6.d-flex.align-items-center.justify-content-center
-                                        img(src="/img/mac.png", alt="").teasers-pisition.img_max-width.d-flex.align-items-center.justify-content-center
+                                        img(src="img/mac.png", alt="").teasers-pisition.img_max-width.d-flex.align-items-center.justify-content-center
                                     .col-12.col-md-4.col-lg-6
                                         h3.tabs__title.tabs-content_center-media768 One of the most interest-provoking advertising method.
                                         span.tabs__span.tabs-content_center-media768 An appealing picture with an attractive headline create a true highlight of the page, which is difficult to ignore. Wide customization options help to configure and maintain this popular ad format in accordance with advertiser needs and user expectations.
@@ -156,7 +156,7 @@ main.main
                         div(id="context" role="tabpanel" aria-labelledby="context-tab").tab-pane.fade
                             .row
                                 .col-12.col-md-8.col-lg-6.d-flex.align-items-center.justify-content-center
-                                    img(src="/img/context.png", alt="").img_max-width
+                                    img(src="img/context.png", alt="").img_max-width
                                 .col-12.col-md-4.col-lg-6
                                     h3.tabs__title.tabs-content_center-media768 Textual ads - easy and fruitful format for commercial goals
                                     span.tabs__span.tabs-content_center-media768 Texts are suitable advertising tool for any-purpose promotion campaign. Thanks to adaptive design and wide customization options, this kind of ads naturally fits into main content of the page and softly induce visitors to follow them.
@@ -165,7 +165,7 @@ main.main
                         div(id="banners" role="tabpanel" aria-labelledby="banners-tab").tab-pane.fade
                             .row
                                 .col-12.col-md-8.col-lg-6.d-flex.align-items-center.justify-content-center
-                                    img(src="/img/banners.png", alt="").img_max-width
+                                    img(src="img/banners.png", alt="").img_max-width
                                 .col-12.col-md-4.col-lg-6
                                     h3.tabs__title.tabs-content_center-media768 An ultimate eye-catching advertising format to draw viewers’ attention
                                     span.tabs__span.tabs-content_center-media768 Banners are an effective image-based promotional tool to notify users of the product. Accompanied by useful customization features, high-quality placement, and animating possibility, these influential ads leave the little possibility to remain unnoticed.
