--- a/app/includes/_main.html
+++ b/app/includes/_main.html
@@ -183,7 +183,7 @@
             <div class="tab-pane fade show active" id="teasers" role="tabpanel" aria-labelledby="teasers-tab">
               <div class="container-fluid">
                 <div class="row">
-                  <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="teasers-pisition img_max-width d-flex align-items-center justify-content-center" src="/img/mac.png" alt=""/></div>
+                  <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="teasers-pisition img_max-width d-flex align-items-center justify-content-center" src="img/mac.png" alt=""/></div>
                   <div class="col-12 col-md-4 col-lg-6">
                     <h3 class="tabs__title tabs-content_center-media768">One of the most interest-provoking advertising method.</h3><span class="tabs__span tabs-content_center-media768">An appealing picture with an attractive headline create a true highlight of the page, which is difficult to ignore. Wide customization options help to configure and maintain this popular ad format in accordance with advertiser needs and user expectations.</span><br/><a class="tabs-content_center-media768 tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
                   </div>
@@ -192,7 +192,7 @@
             </div>
             <div class="tab-pane fade" id="context" role="tabpanel" aria-labelledby="context-tab">
               <div class="row">
-                <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="/img/context.png" alt=""/></div>
+                <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="img/context.png" alt=""/></div>
                 <div class="col-12 col-md-4 col-lg-6">
                   <h3 class="tabs__title tabs-content_center-media768">Textual ads - easy and fruitful format for commercial goals</h3><span class="tabs__span tabs-content_center-media768">Texts are suitable advertising tool for any-purpose promotion campaign. Thanks to adaptive design and wide customization options, this kind of ads naturally fits into main content of the page and softly induce visitors to follow them.</span><br/><a class="tabs-content_center-media768 tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
                 </div>
@@ -200,7 +200,7 @@
             </div>
             <div class="tab-pane fade" id="banners" role="tabpanel" aria-labelledby="banners-tab">
               <div class="row">
-                <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="/img/banners.png" alt=""/></div>
+                <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center justify-content-center"><img class="img_max-width" src="img/banners.png" alt=""/></div>
                 <div class="col-12 col-md-4 col-lg-6">
                   <h3 class="tabs__title tabs-content_center-media768">An ultimate eye-catching advertising format to draw viewers’ attention</h3><span class="tabs__span tabs-content_center-media768">Banners are an effective image-based promotional tool to notify users of the product. Accompanied by useful customization features, high-quality placement, and animating possibility, these influential ads leave the little possibility to remain unnoticed.</span><br/><a class="tabs-content_center-media768 tabs__button btn_font-color_white button_hover-and-active d-flex align-items-center justify-content-center" href="#">Create a campaign</a>
                 </div>
