--- a/app/scss/import/_main.scss
+++ b/app/scss/import/_main.scss
@@ -524,25 +524,38 @@
     margin-bottom: 40px;
 }
 .button_hover-and-active{
+    -moz-transition: .4s;
     transition: .4s;
 }
 .button_hover-and-active:hover{
-    transform: translateY(-1px);
+    position: relative;
+    left: 0px;
+    top: -1px;
     box-shadow: 0px 6px 20px #00000033;
 }
 
 .button_hover-and-active:active{
-    transform: translateY(0px);
+    position: relative;
+    left: 0px;
+    top: 0px;
+    box-shadow: 0px 6px 8px #00000033;
 }
 
 .button__login_hover-and-active{
+    -moz-transition: .4s;
     transition: .4s;
 }
 
 .button__login_hover-and-active:hover{
-    transform: translateY(-1px);
+    position: relative;
+    left: 0px;
+    top: -1px;
+    color: #0073B9 !important;
 }
 
 .button__login_hover-and-active:active{
-    transform: translateY(0px);
+    position: relative;
+    left: 0px;
+    top: 0px;
+    color:#0074BA !important;
 }
