--- a/app/pug/includes/_main.pug
+++ b/app/pug/includes/_main.pug
@@ -174,7 +174,7 @@ main.main
                         div(id="mobile" role="tabpanel" aria-labelledby="mobile-tab").tab-pane.fade
                             .row
                                 .col-12.col-md-8.col-lg-6.d-flex.align-items-center.justify-content-center
-                                    img(src="/img/mobile.png", alt="").img_max-width
+                                    img(src="img/mobile.png", alt="").img_max-width
                                 .col-12.col-md-4.col-lg-6
                                     h3.tabs__title.tabs-content_center-media768 The up-to-day shortest way to reach your target audience
                                     span.tabs__span.tabs-content_center-media768 Due to the growth of mobile Internet users, mobile ad types became one of the most productive means for goods promotion. This flexible and easily managed ad format helps to access a larger number of viewers and increase the engagement rate.
